Fix spacing on the show page.

--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -21,7 +21,7 @@ body {
 #show-page {
   height: 100%;
   overflow: hidden;
-  padding: 71px 0 0 0;
+  padding: 20px 0 0 0;
 }
 
 .navbar-item {
